--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>AngularPwa</title>
-  <base href="/test/">
+  <base href="https://abrahamchumacero.github.io/test/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -13,6 +13,6 @@
 <body class="mat-typography">
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime.64a4c478f89723db.js" type="module"></script><script src="polyfills.1f615f6503c45a75.js" type="module"></script><script src="main.000122dda8abf4b1.js" type="module"></script>
+<script src="runtime.64a4c478f89723db.js" type="module"></script><script src="polyfills.1f615f6503c45a75.js" type="module"></script><script src="main.39a6793f1eea4820.js" type="module"></script>
 
 </body></html>
